--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -3,51 +3,43 @@
 
 <view class="profile-container">
   <!-- 用户信息区域 -->
-  <view class="user-info">
-    <view class="user-basic">
-      <image class="avatar" src="/images/avatar1.png" mode="aspectFill"></image>
-      <text class="username">Leo Yang</text>
-    </view>
-  </view>
-
-  <!-- 用户中心功能区 -->
-  <view class="function-area">
-    <view class="function-item">
-      <image src="/images/track.png" mode="aspectFit"></image>
-      <text>订单跟踪</text>
-    </view>
-    <view class="function-item">
-      <image src="/images/quote.png" mode="aspectFit"></image>
-      <text>我的报价</text>
-    </view>
-    <view class="function-item">
-      <image src="/images/subscribe.png" mode="aspectFit"></image>
-      <text>运价订阅</text>
-    </view>
-  </view>
-
-  <!-- 专属客服卡片 -->
-  <view class="service-card">
-    <view class="service-info">
-      <image class="service-avatar" src="/images/service-vip.png" mode="aspectFit"></image>
-      <view class="service-detail">
-        <text class="service-name">我的专属客服</text>
-        <text class="service-desc">一对一为您服务</text>
+  <view class="user-info-section" bindtap="handleUserClick">
+    <block wx:if="{{isLoggedIn}}">
+      <image class="avatar" src="{{userInfo.avatarUrl || '/images/default-avatar.png'}}" mode="aspectFill"></image>
+      <view class="user-details">
+        <text class="name">{{userInfo.name}}</text>
+        <text class="email">{{userInfo.email}}</text>
       </view>
+    </block>
+    <block wx:else>
+      <image class="avatar" src="/images/default-avatar.png" mode="aspectFill"></image>
+      <view class="user-details">
+        <text class="login-text">登录/注册</text>
+        <text class="login-desc">登录体验更多功能</text>
+      </view>
+    </block>
+    <image class="arrow" src="/images/arrow-right.png" mode="aspectFit"></image>
+  </view>
+
+  <!-- 功能列表 -->
+  <view class="feature-list">
+    <view class="feature-item" bindtap="onMyOrders">
+      <image class="icon" src="/images/orders.png" mode="aspectFit"></image>
+      <text class="title">我的订单</text>
+      <image class="arrow" src="/images/arrow-right.png" mode="aspectFit"></image>
     </view>
-    <view class="contact-area">
-      <image class="qrcode-icon" src="/images/qrcode.png" mode="aspectFit"></image>
-      <image class="arrow-right" src="/images/arrow-right-white.png" mode="aspectFit"></image>
+    <view class="feature-item" bindtap="onMyQuotes">
+      <image class="icon" src="/images/quotes.png" mode="aspectFit"></image>
+      <text class="title">我的报价</text>
+      <image class="arrow" src="/images/arrow-right.png" mode="aspectFit"></image>
+    </view>
+    <view class="feature-item" bindtap="onSettings">
+      <image class="icon" src="/images/settings.png" mode="aspectFit"></image>
+      <text class="title">设置</text>
+      <image class="arrow" src="/images/arrow-right.png" mode="aspectFit"></image>
     </view>
   </view>
 
-  <!-- 企业认证入口 -->
-  <view class="verify-entry">
-    <view class="verify-info">
-      <image class="verify-icon" src="/images/verify.png" mode="aspectFit"></image>
-      <text class="company-name">上海沃特国际货运代理有限公司</text>
-      <image class="verify-success" src="/images/verify-success.png" mode="aspectFit"></image>
-    </view>
-    <image class="arrow-icon" src="/images/arrow-right.png" mode="aspectFit"></image>
-  </view>
+  <!-- 退出登录按钮 -->
+  <button wx:if="{{isLoggedIn}}" class="logout-btn" bindtap="handleLogout">退出登录</button>
 </view>
