--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -251,7 +251,96 @@ page {
 
 .profile-container {
   min-height: 100vh;
-  background: #F5F7FA;
-  padding: 0 24rpx;
-  padding-top: 180rpx;
+  background: #f5f5f5;
+  padding-bottom: 48rpx;
+}
+
+.user-info-section {
+  margin: 24rpx;
+  padding: 32rpx;
+  background: #ffffff;
+  border-radius: 16rpx;
+  display: flex;
+  align-items: center;
+}
+
+.user-details {
+  flex: 1;
+}
+
+.name {
+  font-size: 32rpx;
+  font-weight: 500;
+  color: #333333;
+  margin-bottom: 8rpx;
+}
+
+.email {
+  font-size: 28rpx;
+  color: #666666;
+}
+
+.login-text {
+  font-size: 36rpx;
+  font-weight: 500;
+  color: #333333;
+  margin-bottom: 8rpx;
+  display: block;
+}
+
+.login-desc {
+  font-size: 28rpx;
+  color: #999999;
+  display: block;
+}
+
+.arrow {
+  width: 32rpx;
+  height: 32rpx;
+}
+
+.feature-list {
+  margin: 24rpx;
+  background: #ffffff;
+  border-radius: 16rpx;
+}
+
+.feature-item {
+  display: flex;
+  align-items: center;
+  padding: 32rpx;
+  border-bottom: 2rpx solid #f5f5f5;
+}
+
+.feature-item:last-child {
+  border-bottom: none;
+}
+
+.feature-item .icon {
+  width: 48rpx;
+  height: 48rpx;
+  margin-right: 24rpx;
+}
+
+.feature-item .title {
+  flex: 1;
+  font-size: 30rpx;
+  color: #333333;
+}
+
+.feature-item .arrow {
+  width: 32rpx;
+  height: 32rpx;
+}
+
+.logout-btn {
+  width: 702rpx !important;
+  height: 88rpx;
+  line-height: 88rpx;
+  margin: 48rpx 24rpx;
+  background: #ffffff;
+  color: #ff4d4f;
+  font-size: 32rpx;
+  border-radius: 12rpx;
+  font-weight: normal;
 }
